Refactor UserService a bit. Write (ask Mistral to write them...) Unit Tests for UserService